--- a/DeviceBooker/DeviceBooker.Web.csproj
+++ b/DeviceBooker/DeviceBooker.Web.csproj
@@ -239,6 +239,7 @@
     <Content Include="Views\Home\DeviceGroupList.cshtml" />
     <Content Include="Views\Home\DeviceList.cshtml" />
     <Content Include="Views\Admin\CreateGroup.cshtml" />
+    <Content Include="Views\Admin\CreateDevice.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
