--- a/DeviceBooker/DeviceBooker.Web.csproj
+++ b/DeviceBooker/DeviceBooker.Web.csproj
@@ -26,7 +26,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
-    <TypeScriptToolsVersion>2.1</TypeScriptToolsVersion>
+    <TypeScriptToolsVersion>2.2</TypeScriptToolsVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -642,6 +642,7 @@
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="Scripts\App\Common.ts" />
+    <TypeScriptCompile Include="Scripts\App\CreateDevice.ts" />
     <TypeScriptCompile Include="Scripts\App\CreateGroup.ts" />
     <TypeScriptCompile Include="Scripts\App\DeviceFunctions.ts" />
     <TypeScriptCompile Include="Scripts\App\DeviceList.ts" />
