--- a/DeviceBooker/bin/testi7.dll.config
+++ b/DeviceBooker/bin/testi7.dll.config
@@ -23,7 +23,7 @@
       <deny users="?"/>
     </authorization>
     <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" />
+    <httpRuntime targetFramework="4.5.2" requestPathInvalidCharacters="" />
   </system.web>
   <system.webServer>
     <modules>
