--- a/DeviceBooker/DeviceBooker.Web.csproj
+++ b/DeviceBooker/DeviceBooker.Web.csproj
@@ -631,7 +631,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
+    <Folder Include="Modals\" />
     <Folder Include="temp\" />
   </ItemGroup>
   <ItemGroup>
